Fix #33357: Strip modificator Bright/Contrast doesn't work correct for byte images